<resources>
    <string name="app_name">BrainStrain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start_quiz">start_quiz</string>
    <string name="game_over">game_over</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">\"@string/appbar_scrolling_view_behavior\"</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="signup_here">Don\'t have account?signup here</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="already_a_member_sign_in">Already member?Sign in</string>
    <string name="category">Add Question Category</string>
    <string name="securityhint">Security hint</string>
    <string name="changeEmail">Enter Email Address</string>
    <string name="changesecurityhint">Enter Security Hint</string>
    <string name="newPass">Enter new Password</string>
    <string name="confirmpass">Re-Enter Password</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="unameerr">Incorrect username</string>
    <string name="pwderr">Incorrect Password</string>
    <string name="cnfpwderr">Password does not match</string>
    <string name="phnerr">Incorrect Phone</string>
    <string name="emailerr">Incorrect Email</string>

</resources>
